--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +22,7 @@
   "dependencies": {
     "@google/genai": "^1.21.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
+    "express": "^4.19.2",
     "cors": "^2.8.5"
   }
 }
