docs: update contact email and author information across project files

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/mwimam/gemini-ai-api-project.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Imam Syafii <imamsyafiisatu@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mwimam/gemini-ai-api-project/issues"
